@@ -906,8 +906,7 @@ nma_menu_add_devices (GtkWidget *menu, NMApplet *applet)
 	gint n_wifi_devices = 0;
 	gint n_usable_wifi_devices = 0;
 	gint n_wired_devices = 0;
-	gint n_cdma_devices = 0;
-	gint n_gsm_devices = 0;
+	gint n_mb_devices = 0;
 	int i;
 
 	temp = nm_client_get_devices (applet->nm_client);
@@ -930,13 +929,11 @@ nma_menu_add_devices (GtkWidget *menu, NMApplet *applet)
 				n_usable_wifi_devices++;
 		} else if (NM_IS_DEVICE_ETHERNET (device))
 			n_wired_devices++;
-		else if (NM_IS_CDMA_DEVICE (device))
-			n_cdma_devices++;
-		else if (NM_IS_GSM_DEVICE (device))
-			n_gsm_devices++;
+		else if (NM_IS_CDMA_DEVICE (device) || NM_IS_GSM_DEVICE (device))
+			n_mb_devices++;
 	}
 
-	if (!n_wired_devices && !n_wifi_devices && !n_cdma_devices && !n_gsm_devices) {
+	if (!n_wired_devices && !n_wifi_devices && !n_mb_devices) {
 		nma_menu_add_text_item (menu, _("No network devices available"));
 		goto out;
 	}
@@ -956,10 +953,8 @@ nma_menu_add_devices (GtkWidget *menu, NMApplet *applet)
 			n_devices = n_wifi_devices;
 		else if (NM_IS_DEVICE_ETHERNET (device))
 			n_devices = n_wired_devices;
-		else if (NM_IS_CDMA_DEVICE (device))
-			n_devices = n_cdma_devices;
-		else if (NM_IS_GSM_DEVICE (device))
-			n_devices = n_gsm_devices;
+		else if (NM_IS_CDMA_DEVICE (device) || NM_IS_GSM_DEVICE (device))
+			n_devices = n_mb_devices;
 
 		active = applet_find_active_connection_for_device (device, applet, NULL);
 
