@@ -1,5 +1,12 @@
 2008-10-06  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet-device-cdma.c
+	  src/applet-device-gsm.c
+	  src/applet.c
+		- Use "Mobile Broadband" everywhere instead of GSM or CDMA (bgo #551361)
+
+2008-10-06  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/page-mobile.c
 	  src/connection-editor/ce-page-mobile.glade
 		- Hide Network Type and Band items because they won't be supported until
